# universal-operator

./: .gitignore  Cargo.toml  dump.txt  errors.txt
DemoApp/: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
browser_inspector/: mod.rs
crates/ai_connector/: Cargo.toml
crates/ai_connector/src/: lib.rs
crates/ai_session_manager/: Cargo.toml
crates/ai_session_manager/src/: lib.rs
crates/ai_session_manager/src/browser_inspector/: apple_script.rs  browser.rs  browser_adapter.rs  macos.rs  mod.rs  parser.rs
crates/application_controller/: Cargo.toml
crates/application_controller/src/: lib.rs
crates/browser_controller/: Cargo.toml
crates/browser_controller/src/: lib.rs
crates/common/src/: lib_old.rs
crates/execution_engine/: Cargo.toml
crates/execution_engine/src/: lib.rs
crates/execution_planner/: Cargo.toml
crates/execution_planner/src/: lib.rs
crates/execution_planner/tests/: planner_test.rs
crates/execution_queue/: Cargo.toml
crates/execution_queue/src/: lib.rs
crates/execution_reporter/: Cargo.toml
crates/execution_reporter/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/examples/: files.rs
crates/executor/src/: lib.rs
crates/executor/src/execution/: executor.rs
crates/executor/src/files/: file_manager.rs  mod.rs
crates/executor/src/os/: mod.rs  operating_system.rs
crates/executor/src/os/macos/: macos.rs  mod.rs
crates/executor/src/terminal/: mod.rs  terminal_manager.rs
crates/file_manager/src/: lib.rs
crates/keyboard_controller/: Cargo.toml
crates/keyboard_controller/src/: lib.rs
crates/logger/src/: lib.rs
crates/mouse_controller/: Cargo.toml
crates/mouse_controller/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/permission_manager/: Cargo.toml
crates/permission_manager/src/: lib.rs
crates/planner/src/: lib.rs  plan.rs  planner.rs
crates/platform/: Cargo.toml
crates/queue/src/: lib.rs  queue.rscode
crates/response_listener/: Cargo.toml
crates/response_listener/src/: lib.rs  listener.rs
crates/settings_manager/: Cargo.toml
crates/ui_manager/: Cargo.toml
crates/window_manager/: Cargo.toml
crates/window_manager/src/: lib.rs
crates/work_session_manager/: Cargo.toml
crates/work_session_manager/src/: lib.rs
crates/workspace/src/: lib.rs
demo/: main.rs
src/: lib.rs  tests.rs  utils.rs
tools/: ax_dump.swift  chatgpt_read.swift  chatgpt_send.swift
(+85 files in other folders)
